[package]
name = "eng-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tui = "0.19.0"
crossterm = "0.26.1"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.16", features = ["json"] }